# jammates-miniaudio

./: .gitmodules  README.md  pubspec.yaml
.dart_tool/: package_config.json  package_config_subset
.dart_tool/flutter_build/2dc9c17fc3641480373c9684a56e1bc8/: .filecache  debug_ios_bundle_flutter_assets.stamp  debug_universal_framework.stamp  debug_unpack_ios.stamp  flutter_assets.d  kernel_snapshot.d  kernel_snapshot.stamp  outputs.json
.dart_tool/flutter_build/305fb34d6ecd02745a7f65eaa4d7ab1a/: .filecache  debug_ios_bundle_flutter_assets.stamp  debug_universal_framework.stamp  debug_unpack_ios.stamp  flutter_assets.d  kernel_snapshot.d  kernel_snapshot.stamp
.dart_tool/flutter_build/571b360b9c34bdcddcb637deeda33065/: .filecache  debug_android_application.stamp  flutter_assets.d  gen_dart_plugin_registrant.stamp  kernel_snapshot.d  kernel_snapshot.stamp  outputs.json
.dart_tool/flutter_build/90d22668468709ae5c483a991780d592/: .filecache  debug_ios_bundle_flutter_assets.stamp  debug_universal_framework.stamp  debug_unpack_ios.stamp  flutter_assets.d  kernel_snapshot.d  kernel_snapshot.stamp  outputs.json
.dart_tool/flutter_build/ab3bf73a1d19eab6588deed208d22606/: .filecache  debug_ios_bundle_flutter_assets.stamp  debug_universal_framework.stamp  debug_unpack_ios.stamp  flutter_assets.d  gen_dart_plugin_registrant.stamp  kernel_snapshot.d  (+2 more)
FFI_CODE/raudio/: .metadata  README.md  ffigen.yaml  pubspec.yaml
FFI_CODE/raudio/src/: CMakeLists.txt  raudio.c  raudio.h
android/: ExecuteLOGCAT.bat
android/app/: CMakeLists.txt  build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: androidAPI.c  androidAPI.h  main.c  raudio.c
android/app/src/main/java/com/example/jammates/: MainActivity.java
android/app/src/main/java/com/example/jammates_miniaudio/: MainActivity.java
android/app/src/main/java/com/jenggotmalam/: MiniAudioPlayer.java
android/app/src/main/kotlin/com/example/jammates/: MainActivity.kt
android/app/src/main/kotlin/com/example/jammates_miniaudio/: MainActivity.kt
android/app/src/main/kotlin/com/example/jammates_miniaudio2/: MainActivity.kt
android/app/src/main/kotlin/com/example/miniaudio33/: MainActivity.kt
android/app/src/profile/: AndroidManifest.xml
android_old/: local.properties
ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
ios/Runner/: AppDelegate  AppDelegate.m  Info.plist  iosAPI.c  iosAPI.h  raudio.c
ios/Runner.xcodeproj/: project.pbxproj
ios_lib/Runner/: AppDelegate.m
ios_lib/Runner.xcodeproj/: project.pbxproj
ios_xlib/Runner/: AppDelegate.m
ios_xlib/Runner.xcodeproj/: project.pbxproj
lib/: main-2.dart  main.dart  main2.darts  main_new
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
miniaudio/: README.md  raudio.c  raudio.h
miniaudio/AndroidAPI/: androidAPI.c  androidAPI.h
miniaudio/IOSAPI/: iosAPI.c  iosAPI.h
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+31 files in other folders)
